# Datalog-Program

./: Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IdAutomaton.cpp  IdAutomaton.h  IncompleteStringAutomaton.cpp  IncompleteStringAutomaton.h  Interpreter.cpp  Interpreter.h  InvalidBlockCommentAutomaton.cpp  InvalidBlockCommentAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  (+3 more)
Lab4PassOffCases/4-80/: input3.txt
